# onAir2Companion

./: .gitignore  README.en.md  README.md
.github/workflows/: publish-release.yml
dev/companion-module/: README.md  main.js  package-lock.json  package.json
dev/companion-module/companion/: manifest.json
dev/companion-module/src/: index.ts
dev/docs/: COMMAND_TEMPLATES.md  COMPANION_REVERSE_TEST.md  FDOnAirCommands.rtf  FDOnAirXMLCommands.rtf  GITHUB_RELEASE_CHECKLIST.md  OnAir mirror messages N+1.rtf  OnAir mirror messages.rtf  RELEASE_NOTES_v0.1.0_SHORT.md  SLMessageServerSDK.doc
dev/server/: CMakeLists.txt  README.md
dev/server/run to service/: install-service.ps1  remove-service.ps1
dev/server/softlab/: README.txt
dev/server/softlab/x86/: SLMessageRemote2.tlb
dev/server/src/: server.cpp  stdafx.h
release/companion/onair-bridge-0.1.0/: MIRROR_COMMANDS.md  README.md  package.json
release/companion/onair-bridge-0.1.0/companion/: HELP.md  manifest.json
release/server/: README.md  config.json
release/server/run to service/: install-service.ps1  remove-service.ps1
